--- a/wrangler.toml
+++ b/wrangler.toml
@@ -15,8 +15,8 @@ pages_build_output_dir = "./dist"
 # - https://developers.cloudflare.com/pages/functions/bindings/#environment-variables
 # Note: Use secrets to store sensitive data.
 # - https://developers.cloudflare.com/pages/functions/bindings/#secrets
-# [vars]
-# MY_VARIABLE = "production_value"
+[vars]
+ENV_VALUE = "env_value"
 
 # Bind the Workers AI model catalog. Run machine learning models, powered by serverless GPUs, on Cloudflare’s global network
 # Docs: https://developers.cloudflare.com/pages/functions/bindings/#workers-ai
@@ -77,8 +77,8 @@ pages_build_output_dir = "./dist"
 
 ######## PRODUCTION environment config ########
 
-# [env.production.vars]
-# API_KEY = "abc123"
+[env.production.vars]
+ENV_VALUE = "env_value_on_prod"
 
 # [[env.production.kv_namespaces]]
 # binding = "MY_KV_NAMESPACE"
